srcfinal/cAnalyseur/GenerateurAnalyseur.java
/* Generated By:JJTree&JavaCC: Do not edit this line. GenerateurAnalyseur.java */
package cAnalyseur;
/*
classe ecrit javaCC et generée automatiquement
la grammaire y est decodé et transformée.
*/
public class GenerateurAnalyseur/*@bgen(jjtree)*/implements GenerateurAnalyseurTreeConstants, GenerateurAnalyseurConstants {/*@bgen(jjtree)*/
  protected JJTGenerateurAnalyseurState jjtree = new JJTGenerateurAnalyseurState();protected SimpleNode root;
 /*
 * effectue l analyse syntaxique de la chaine donnée en paramètre
 *
 * @param la chaine représentant la formule à analyser
 *
 * @return deux elements:true ou false selon que le resultat de l analyse
 * et la chaine correspondante à la formule en python.
 */

  protected Object[] check(String pourAnalyser)throws ParseException
  {
    GenerateurAnalyseur parser = new GenerateurAnalyseur(new java.io.StringReader(pourAnalyser));
        Object[] obj ={false,""};
        root = null;
    try
      {
       // premiere alternative d'analyse
         root = parser.alternative1();
                obj[0] = true;
                return obj;
      }
      catch (Exception e)
      {

                try
                {
                  /*l alternative 1 n a pas abouti,la chaine etant consommée (peut etre amelioré!)*/
                  parser = new GenerateurAnalyseur(new java.io.StringReader(pourAnalyser));
                  root = parser.alternative2();
          obj[0] = true;
          return obj;
                }
                catch(Exception f)
                {

                        obj[1] = e.getMessage()+"\u005ct"+f.getMessage();
                        return obj;

                }
                catch(Error f)
                {
                                obj[0] = false;
                        obj[1] = f.getMessage();
                        return obj;
                }
    }
       catch (Error e)
      {
                                obj[0] = false;
                        obj[1] = "Error";
                        return obj;
      }

}

  final public void constante() throws ParseException {
 /*@bgen(jjtree) constante */
  SimpleNode jjtn000 = new SimpleNode(JJTCONSTANTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token a;String s;
    try {
      a = jj_consume_token(CONSTANTE);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   s=a.image;jjtn000.value = s;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void variable() throws ParseException {
 /*@bgen(jjtree) variable */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token b;String s;
    try {
      b = jj_consume_token(VARIABLE);
     jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
    s=b.image;jjtn000.value = s;
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*termes*/
  final public void term() throws ParseException {
    if (jj_2_1(2)) {
      constante();
    } else if (jj_2_2(2)) {
      variable();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public SimpleNode alternative1() throws ParseException {
 /*@bgen(jjtree) alternative1 */
  SimpleNode jjtn000 = new SimpleNode(JJTALTERNATIVE1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      formule();
      jj_consume_token(0);
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode alternative2() throws ParseException {
 /*@bgen(jjtree) alternative2 */
  SimpleNode jjtn000 = new SimpleNode(JJTALTERNATIVE2);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      formule_();
      jj_consume_token(0);
                          jjtree.closeNodeScope(jjtn000, true);
                          jjtc000 = false;
                         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/*prédicats de couleur*/
  final public void est_rose() throws ParseException {
 /*@bgen(jjtree) rs */
  SimpleNode jjtn000 = new SimpleNode(JJTRS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(7);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void est_blanche() throws ParseException {
 /*@bgen(jjtree) bl */
  SimpleNode jjtn000 = new SimpleNode(JJTBL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(9);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void est_rouge() throws ParseException {
 /*@bgen(jjtree) rg */
  SimpleNode jjtn000 = new SimpleNode(JJTRG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(10);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

/*prédicats de comparaison de couleur binaire*/
  final public void mm_col() throws ParseException {
 /*@bgen(jjtree) mc */
  SimpleNode jjtn000 = new SimpleNode(JJTMC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _col();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  final public void _col() throws ParseException {
    jj_consume_token(13);
  }

/*prédicats d'espèce*/
  final public void paquerette() throws ParseException {
 /*@bgen(jjtree) pa */
  SimpleNode jjtn000 = new SimpleNode(JJTPA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(14);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void tulipe() throws ParseException {
 /*@bgen(jjtree) tu */
  SimpleNode jjtn000 = new SimpleNode(JJTTU);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(15);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void rose() throws ParseException {
 /*@bgen(jjtree) ro */
  SimpleNode jjtn000 = new SimpleNode(JJTRO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(16);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*prédicats de position unaire*/
  final public void at_est() throws ParseException {
 /*@bgen(jjtree) ae */
  SimpleNode jjtn000 = new SimpleNode(JJTAE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(17);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void at_ouest() throws ParseException {
 /*@bgen(jjtree) ao */
  SimpleNode jjtn000 = new SimpleNode(JJTAO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(18);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void at_nord() throws ParseException {
 /*@bgen(jjtree) an */
  SimpleNode jjtn000 = new SimpleNode(JJTAN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(19);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void at_sud() throws ParseException {
 /*@bgen(jjtree) as */
  SimpleNode jjtn000 = new SimpleNode(JJTAS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(20);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*prédicats de comparaison de  position binaire*/
  final public void est_de() throws ParseException {
 /*@bgen(jjtree) ed */
  SimpleNode jjtn000 = new SimpleNode(JJTED);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _est_de();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _est_de() throws ParseException {
    jj_consume_token(21);
  }

  final public void ouest_de() throws ParseException {
 /*@bgen(jjtree) od */
  SimpleNode jjtn000 = new SimpleNode(JJTOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _ouest_de();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
  }

  final public void _ouest_de() throws ParseException {
    jj_consume_token(22);
  }

  final public void nord_de() throws ParseException {
 /*@bgen(jjtree) nd */
  SimpleNode jjtn000 = new SimpleNode(JJTND);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _nord_de();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _nord_de() throws ParseException {
    jj_consume_token(23);
  }

  final public void sud_de() throws ParseException {
 /*@bgen(jjtree) sd */
  SimpleNode jjtn000 = new SimpleNode(JJTSD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _sud_de();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _sud_de() throws ParseException {
    jj_consume_token(24);
  }

  final public void mm_latitude() throws ParseException {
 /*@bgen(jjtree) ma */
  SimpleNode jjtn000 = new SimpleNode(JJTMA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _mm_latitude();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _mm_latitude() throws ParseException {
    jj_consume_token(25);
  }

  final public void mm_longitude() throws ParseException {
 /*@bgen(jjtree) mo */
  SimpleNode jjtn000 = new SimpleNode(JJTMO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _mm_longitude();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _mm_longitude() throws ParseException {
    jj_consume_token(26);
  }

/*prédicats de comparaison de position ternaire*/
  final public void est_entre() throws ParseException {
 /*@bgen(jjtree) en */
  SimpleNode jjtn000 = new SimpleNode(JJTEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _est_entre();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _est_entre() throws ParseException {
    jj_consume_token(27);
  }

/*prédicats de taille*/
  final public void est_petit() throws ParseException {
 /*@bgen(jjtree) ep */
  SimpleNode jjtn000 = new SimpleNode(JJTEP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(28);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void est_grand() throws ParseException {
 /*@bgen(jjtree) eg */
  SimpleNode jjtn000 = new SimpleNode(JJTEG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(29);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void est_moyen() throws ParseException {
 /*@bgen(jjtree) em */
  SimpleNode jjtn000 = new SimpleNode(JJTEM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(30);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/*prédicats de comparaison de taille */
  final public void plus_petit() throws ParseException {
 /*@bgen(jjtree) pp */
  SimpleNode jjtn000 = new SimpleNode(JJTPP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      _plus_petit();
      jj_consume_token(11);
      term();
      jj_consume_token(12);
      term();
      jj_consume_token(8);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void _plus_petit() throws ParseException {
    jj_consume_token(31);
  }
